commit before verification
